--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.3",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2",
+    "mysql2": "^3.9.3",
     "nodemon": "^3.0.3"
   }
 }
